_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T161_20260113_193625.log
[0;32m[AGENT] Real Agent starting[0m
[0;34m[AGENT] Task: /Users/sylvain/_LAPOSTE/_VELIGO2/tools/ralph-wiggum/tasks/T161.md[0m
[0;34m[AGENT] Queue: tdd[0m
[0;34m[AGENT] Backend: auto[0m
[0;32m[AGENT] Starting task: T161[0m
[0;34m[AGENT] Iteration 1/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'ls -la /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/aut[0m
[0;34m$ ls -la /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/ 2>/dev/null || echo "Directory does not exist"[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/f[0m
[0;34m$ cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs 2>/dev/null || echo "File does not exist"[0m
[0;34m[AGENT] Iteration 2/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/f[0m
[0;34m$ cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Iteration 3/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'wc -l /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth[0m
[0;34m$ wc -l /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'head -100 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/[0m
[0;34m$ head -100 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Iteration 4/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'tail -20 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/a[0m
[0;34m$ tail -20 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/f[0m
[0;34m$ cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs | head -60[0m
[0;34m[AGENT] Iteration 5/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/f[0m
[0;34m$ cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs 2>&1 | cat -A[0m
[0;34m[AGENT] Iteration 6/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/f[0m
[0;34m$ cat /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cargo test --lib -p veligo-api --no-run 2>&1 | tail -30'}[0m
[0;34m$ cargo test --lib -p veligo-api --no-run 2>&1 | tail -30[0m
[0;34m[AGENT] Iteration 7/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': "sed -n '1,200p' /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backen[0m
[0;34m$ sed -n '1,200p' /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Iteration 8/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'strings /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/au[0m
[0;34m$ strings /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'hexdump -C /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src[0m
[0;34m$ hexdump -C /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/auth/franceconnect/mod.rs | tail -20[0m
[0;34m[AGENT] Iteration 9/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && cargo ch[0m
[0;34m$ cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && cargo check 2>&1 | tail -50[0m
[0;34m[AGENT] Iteration 10/10[0m
[0;34m[AGENT] Executing: bash - {'type': 'bash', 'command': 'cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && timeout [0m
[0;34m$ cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && timeout 120 cargo check 2>&1 | grep -A 5 "franceconnect\|error\[E"[0m

============================================================
RESULT: FAILED
============================================================
=== Action Results ===
bash: OK
//! FranceConnect OAuth configuration module
//! This module provides configuration and types for FranceConnect authentication.
//! FranceConnect is the French government identity provider.
use serde::Deserialize;
/// FranceConnect OAuth configuration
#[derive(Debug, Clone, Deserialize)]
pub struct FranceConnectConfig {
    /// OAuth client ID
    pub client_id: String,
    /// OAuth client secret
    pub client_secret: String,
    /// Authorization endpoint URL
    pub authorization_endpoint: S
---
bash: OK
00000640  73 74 29 5d 0a 6d 6f 64  20 74 65 73 74 73 20 7b  |st)].mod tests {|
00000650  0a 20 20 20 20 75 73 65  20 73 75 70 65 72 3a 3a  |.    use super::|
00000660  2a 3b 0a 0a 20 20 20 20  23 5b 74 65 73 74 5d 0a  |*;..    #[test].|
00000670  20 20 20 20 66 6e 20 74  65 73 74 5f 64 65 66 61  |    fn test_defa|
00000680  75 6c 74 5f 63 6f 6e 66  69 67 28 29 20 7b 0a 20  |ult_config() {. |
00000690  20 20 20 20 20 20 20 6c  65 74 20 63 6f 6e 66 69  |       let confi|
000006a0  67 20 3d 20 46 7

=== LLM Response ===
<think>
I can see the file exists and has content. Let me try to compile it and see the actual errors:
</think>

<bash>cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && cargo check 2>&1 | tail -50</bash>

=== Action Results ===
bash: OK
319 | |             .await?;
320 | |         T::spawn(driver);
321 | |         Ok(connection)
322 | |     }
    | |_____^
note: required because it's used within this `async` fn body
   --> /Users/sylvain/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/redis-0.24.0/src/client.rs:143:57
    |
143 |       ) -> RedisResult<crate::aio::MultiplexedConnection> {
    |  _________________________________________________________^
144 | |         self.get_multiplexed_async_connection_inner::<crate::a

=== LLM Response ===
<think>
The cargo check is still running. Let me wait for it to finish and see the actual error related to the FranceConnect module. Let me try to compile just the auth module.
</think>

<bash>cd /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend && timeout 120 cargo check 2>&1 | grep -A 5 "franceconnect\|error\[E"</bash>

=== Action Results ===
bash: OK
error[E0412]: cannot find type `Arc` in this scope
   --> backend/src/services/reporting/report_routes.rs:109:23
    |
109 |     pub redis: Option<Arc<RedisCache>>,
    |                       ^^^ not found in this scope
    |
--
error[E0425]: cannot find value `aom_name` in this scope
   --> backend/src/services/reporting/report_routes.rs:312:24
    |
312 |         aom_name: Some(aom_name),
    |                        ^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of un
